Lightsail server fixes

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DB_CONN='mongodb://apiLogin:gGQbmAudcNDxVz8E@localhost:27017/erp_test?authSource=admin'
+DB_CONN='mongodb://root:pM3Xuo01Y07t@localhost:27017/erp_abrace?authSource=admin'
 TOKEN_SECRET="P3O9naZwF4xVf1cZEFJMKbqBZY72Eykv"
